5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1638_2729.log
== TEST (2019-04-10 21:08:03) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a + b

print(c)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:10:51) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a * 11

print(c)
-- OUTPUT:
99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:11:25) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a * 11
d = b * 11

print(c,d)
-- OUTPUT:
99 110
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:12:46) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = (a * 11)%10
d = (b * 11)%10

print(c,d)
-- OUTPUT:
9 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:13:48) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 3
d = b % 3

print(c,d)
-- OUTPUT:
0 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:14:32) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 3
d = b % 3

print(c,d)
-- OUTPUT:
0 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:15:13) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

print(c,d)
-- OUTPUT:
1 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:15:23) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

print(c,d)
-- OUTPUT:
1 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:18) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:26) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:34) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:39) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:47) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:17:53) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:18:10) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:18:35) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:21:51) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.153064
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:25:50) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d

if(x == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.134436
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:46:01) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d
y = x-x
if(y == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:46:28) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

x = c+d
y = x-x
if(y == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.164535
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:47:12) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.138031
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:47:25) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:48:00) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:48:21) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:34) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:49:51) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:50:25) 
-- CODE:
a = float(input("numero1:"))
b = float(input("numero2:"))

c = a % 2
d = b % 2

if(c+d == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.254829
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1.0
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:52:06) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.29163
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:52:09) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.162939
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:52:22) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(a+b)
else:
	print(a-b)
-- EXECUTION TIME:
0.155924
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
-1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:53:24) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:55) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(y//10)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:46) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(y%10)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:04) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(x%10)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:56:10) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(x%10)
else:
	print(b-a)
-- EXECUTION TIME:
0.120421
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:56:26) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(x)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:56:32) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(x)
else:
	print(b-a)
-- EXECUTION TIME:
0.131332
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:57:19) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print a+b
else:
	print b-a
-- EXECUTION TIME:
0.162432
-- ERROR:
  File "/home/codebench/codes/1638/2729/main.py", line 8
    print a+b
          ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:57:26) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print a+b
else:
	print b-a
-- ERROR:
File "XXXX", line 8
    print a+b
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a+b)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:57:51) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a+b
y = x % 2

if(y == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:00:47) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:05:35) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
elif(a % 2 == 1):
	if(b % 2 == 1):
		print(a+b)
	else:
		print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:05:46) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
elif(a % 2 == 1):
	if(b % 2 == 1):
		print(a+b)
	else:
		print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:05:59) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
elif(a % 2 == 1):
	if(b % 2 == 1):
		print(a+b)
	else:
		print(b-a)
-- EXECUTION TIME:
0.115088
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:06:34) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
elif(a % 2 == 1):
	if(b % 2 == 1):
		print(b-a)
	else:
		print(b-a)
-- EXECUTION TIME:
0.194469
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:06:42) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
	else:
		print(b-a)
elif(a % 2 == 1):
	if(b % 2 == 1):
		print(b-a)
	else:
		print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:59) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:13) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

if(a % 2 == 0):
	if(b % 2 == 0):
		print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.135637
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:56) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a*b

if(x % 2 == 0):
	if(x % 2 == 0):
		print(a+b)
else:
	print(b-a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:27:21) 
-- CODE:
a = int(input("numero1:"))
b = int(input("numero2:"))

x = a*b

if(x % 2 == 0):
	if(x % 2 == 0):
		print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.333105
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
